# ccsf-con

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ccsf_con/: __init__.py  apiCon.py  oracledb_con.py
tests/: test_apiCon.py  test_init.py  test_oracleDbCon.py  test_oracledb_con.py
