[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccsf-con"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "clin94118", email = "clin@ccsf.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/clin94118/ccsf-con#readme"
Issues = "https://github.com/clin94118/ccsf-con/issues"
Source = "https://github.com/clin94118/ccsf-con"

[tool.hatch.version]
path = "src/ccsf_con/__about__.py"
